Version 0.5

	* Begin summarizing changes in a changelog
	* Begin abstracting parts of JIRA model

	* Fixed RemoteAPI#add_version_to_project_with_key

	* Added RemoteAPI#get_server_configuration

	* Changed use of factories to constructors in the model
	* Changed FieldValue#id to FieldValue#field_name
	* Changed CustomField to CustomFieldValue
	* Changed User#name to User#username
	* Changed Scheme#type to return the class name
	* Changed some RemoteAPI method names to be more descriptive
	* Changed Avatar#content_type to Avatar#mime_type
	* Changed CustomFieldValue to require an XML fragment at initialization
	* Various documentation updates